# AgentWarden

./: .gitignore  AGENTS.md  DECISIONS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
dashboard/: next.config.ts  package-lock.json  package.json
dashboard/app/: layout.tsx  page.tsx  styles.css
dashboard/app/api/config/: route.ts
dashboard/app/api/dashboard/: route.ts
dashboard/scripts/: package-static.mjs
demo_agent/: __init__.py  agent.py  tools.py
demo_agent/sample_repo/: app.py  inventory.py  math_utils.py  tags.py  text_utils.py
demo_agent/sample_repo/tests/: test_app.py  test_inventory.py  test_math_utils.py  test_tags.py  test_text_utils.py
docs/: GTM_AND_LAUNCH.md  RELEASING.md  USING_AGENTWARDEN.md
examples/: __init__.py
examples/independent_agent/: README.md  __init__.py  agent.py
lead_agent/: __init__.py  agent.py
proxy/: __init__.py  analyzer.py  cli.py  config.py  pipeline.py  server.py  store.py
proxy/dashboard_static/: 404.html  index.html  index.txt
proxy/dashboard_static/_next/static/chunks/: 255-1942d8c06a8efc87.js  main-app-12b1092f052cd4bd.js  main-ea6b6ef0a33cac9d.js  webpack-6e54afe13f5ea724.js
proxy/dashboard_static/_next/static/chunks/app/: layout-2c38200ebf3422e6.js  page-8b39340b337f676a.js
proxy/dashboard_static/_next/static/chunks/app/_not-found/: page-7288dcce882d8685.js
proxy/dashboard_static/_next/static/css/: 809df84ad2513dfa.css
proxy/optimizers/: __init__.py  cache_order.py  context_dedup.py  history_trim.py  tool_prune.py
replay/: __init__.py  verify.py
scripts/: smoke.py
site/: package-lock.json  package.json
site/app/: layout.tsx  page.tsx  site.css
tests/: test_cli.py  test_demo_agent_tools.py  test_efficiency_layers.py  test_independent_agent.py  test_lead_agent.py  test_passthrough.py  test_pipeline.py  test_tool_prune.py
