[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentwarden"
version = "0.1.0"
description = "A transparent OpenAI-compatible proxy for agent token tracing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "openai>=1,<3",
    "tiktoken>=0.8,<1",
    "uvicorn[standard]>=0.30,<1",
]

[project.scripts]
agentwarden = "proxy.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "live: calls the real OpenAI API and requires OPENAI_API_KEY",
]

[tool.setuptools.packages.find]
include = ["proxy*", "demo_agent*", "replay*"]
