[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentwarden-ai"
version = "0.1.0"
description = "A local OpenAI-compatible proxy that reduces agent context waste and proves behavior held."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jahan Shah" }]
keywords = ["ai-agents", "openai", "proxy", "observability", "tokens", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "openai>=1,<3",
    "tiktoken>=0.8,<1",
    "uvicorn[standard]>=0.30,<1",
]

[project.scripts]
agentwarden = "proxy.cli:main"

[project.urls]
Homepage = "https://github.com/Jahanshah1/AgentWarden"
Repository = "https://github.com/Jahanshah1/AgentWarden"
Issues = "https://github.com/Jahanshah1/AgentWarden/issues"

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "live: calls the real OpenAI API and requires OPENAI_API_KEY",
]

[tool.setuptools.packages.find]
include = ["proxy*", "demo_agent*", "replay*"]

[tool.setuptools.package-data]
proxy = ["dashboard_static/**/*"]
